// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarComponent should compile 1`] = `
<div
  id="root0"
  ng-version="5.0.0-rc.1"
>
  <nav>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/"
      mat-button=""
      ng-reflect-router-link=""
      routerlink=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        FUSEBOX-ANGULAR-UNIVERSAL-STARTER
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <div
      class="flex-spacer"
    />
    
  
    
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/"
      mat-button=""
      ng-reflect-router-link=""
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Home
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/dashboard"
      mat-button=""
      ng-reflect-router-link="dashboard"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Dashboard
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/dashboard"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/about"
      mat-button=""
      ng-reflect-router-link="about"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      About
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/about"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/search"
      mat-button=""
      ng-reflect-router-link="search"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Search
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/search"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/login"
      mat-button=""
      ng-reflect-router-link="login"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Login
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/login"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/logout"
      mat-button=""
      ng-reflect-router-link="logout"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Logout
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/logout"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/signup"
      mat-button=""
      ng-reflect-router-link="signup"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Signup
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/signup"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/admin"
      mat-button=""
      ng-reflect-router-link="admin"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Admin
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/admin"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/changelog"
      mat-button=""
      ng-reflect-router-link="changelog"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Changelog
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/changelog"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/api-docs"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        API
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/api-docs"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/sitemap.xml"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        Sitemap
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/sitemap.xml"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/robots.txt"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        Robots
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/robots.txt"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    

  </nav>
</div>
`;

exports[`NavbarComponent should contain a list of links 1`] = `
<div
  id="root1"
  ng-version="5.0.0-rc.1"
>
  <nav>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/"
      mat-button=""
      ng-reflect-router-link=""
      routerlink=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        FUSEBOX-ANGULAR-UNIVERSAL-STARTER
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <div
      class="flex-spacer"
    />
    
  
    
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/"
      mat-button=""
      ng-reflect-router-link=""
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Home
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/dashboard"
      mat-button=""
      ng-reflect-router-link="dashboard"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Dashboard
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/dashboard"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/about"
      mat-button=""
      ng-reflect-router-link="about"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      About
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/about"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/search"
      mat-button=""
      ng-reflect-router-link="search"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Search
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/search"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/login"
      mat-button=""
      ng-reflect-router-link="login"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Login
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/login"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/logout"
      mat-button=""
      ng-reflect-router-link="logout"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Logout
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/logout"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/signup"
      mat-button=""
      ng-reflect-router-link="signup"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Signup
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/signup"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/admin"
      mat-button=""
      ng-reflect-router-link="admin"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Admin
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/admin"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/changelog"
      mat-button=""
      ng-reflect-router-link="changelog"
      ng-reflect-router-link-active="active"
      ng-reflect-router-link-active-options="[object Object]"
      routerlinkactive="active"
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        
      Changelog
    
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/changelog"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/api-docs"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        API
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/api-docs"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/sitemap.xml"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        Sitemap
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/sitemap.xml"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    
  
    <a
      aria-disabled="false"
      class="nav-button mat-button"
      href="/robots.txt"
      mat-button=""
      tabindex="0"
    >
      <span
        class="mat-button-wrapper"
      >
        Robots
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="/robots.txt"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </a>
    

  </nav>
</div>
`;
